# inboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sourcery.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cspell.json  mkdocs.yml  mypy.ini  poetry.toml  pylock.base.toml  pylock.ci.toml  pylock.docs.toml  pylock.fastapi.toml  pylock.starlette.toml  pylock.toml  pyproject.toml  pytest.ini  vercel.json  zensical.toml
.basedpyright/: baseline.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: builds.yml  ci.yml  codeql.yml  hooks.yml  tests.yml
.github/workflows-draft/: builds.yml
docs/: authentication.md  changelog.md  contributing.md  docker.md  environment.md  index.md  logging.md
inboard/: __init__.py  gunicorn_conf.py  gunicorn_workers.py  logging_conf.conf  logging_conf.py  logging_conf.yml  prestart.py  start.py  types.py
inboard/app/: main_base.py  main_fastapi.py  main_starlette.py  prestart.py  utilities.py  utilities_fastapi.py  utilities_starlette.py
inboard/app/base/: main.py
inboard/app/fastapi/: main.py
inboard/app/fastapibase/: main.py
inboard/app/starlettebase/: main.py
inboard/examples/: fizzbuzz.py  palindrome.py
templatepython/examples/: fibonacci.py
tests/: conftest.py  test_gunicorn_conf.py  test_gunicorn_workers.py  test_logging_conf.py  test_metadata.py  test_start.py  test_types.py  test_version.py
tests/app/: test_main.py
tests/examples/: test_fizzbuzz.py  test_palindrome.py
